# CV

./: README.md
CV 1/: CMakeLists.txt
CV 1/Project1/: l01.cpp
CV 1/Project2/: l021.cpp  l022.cpp
CV 1/Project3/: l031.cpp  l032.cpp  l033.cpp  l034.cpp
CV 1/Project4/: l041.cpp  l042.cpp
CV 1/Project5/: l051.cpp  l052.cpp  l053.cpp
CV 2/: instructions.txt
CV 2/kmeans/: CMakeLists.txt  c.cpp
CV 2/neural/: c.cpp
CV 2/plot/: c.cpp
CV 2/rotation/: c.cpp
CV 2/waldo/: CMakeLists.txt  c.cpp
